--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,6 +30,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         app:defaultNavHost="true"
+        android:background="#7CF4F0F0"
         app:navGraph="@navigation/navigation"
         />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
