--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -24,7 +24,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:text="Shoe Name"
+            android:text="@string/shoe_name"
             app:layout_constraintBottom_toTopOf="@+id/shoe_name_edittext"
             app:layout_constraintEnd_toEndOf="@+id/shoe_name_edittext"
             app:layout_constraintHorizontal_bias="0.0"
@@ -35,7 +35,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:text="Company Name"
+            android:text="@string/company_name"
             app:layout_constraintBottom_toTopOf="@+id/company_name_edittext"
             app:layout_constraintEnd_toEndOf="@+id/company_name_edittext"
             app:layout_constraintHorizontal_bias="0.0"
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:text="Description"
+            android:text="@string/description"
             app:layout_constraintBottom_toTopOf="@+id/description_edittext"
             app:layout_constraintEnd_toEndOf="@+id/description_edittext"
             app:layout_constraintHorizontal_bias="0.0"
@@ -57,7 +57,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginBottom="8dp"
-            android:text="Shoe Size"
+            android:text="@string/shoe_size"
             app:layout_constraintBottom_toTopOf="@+id/shoe_size_edittext"
             app:layout_constraintEnd_toEndOf="@+id/shoe_size_edittext"
             app:layout_constraintHorizontal_bias="0.0"
@@ -75,7 +75,8 @@
             android:text="@={shoeData.name}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent"/>
+            app:layout_constraintStart_toStartOf="parent"
+            android:hint="@string/salinger_lace_up_boots_hint"/>
 
         <EditText
             android:id="@+id/company_name_edittext"
@@ -89,7 +90,8 @@
             android:text="@={shoeData.company}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/shoe_name_edittext" />
+            app:layout_constraintTop_toBottomOf="@+id/shoe_name_edittext"
+            android:hint="@string/_company_name_hint"/>
 
         <EditText
             android:id="@+id/description_edittext"
@@ -103,7 +105,8 @@
             android:inputType="textPersonName"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/company_name_edittext" />
+            app:layout_constraintTop_toBottomOf="@+id/company_name_edittext"
+            android:hint="@string/product_description_hint"/>
 
         <EditText
             android:id="@+id/shoe_size_edittext"
@@ -117,7 +120,8 @@
             android:text="@={shoeData.size}"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/description_edittext" />
+            app:layout_constraintTop_toBottomOf="@+id/description_edittext"
+            android:hint="@string/shoe_size_hint"/>
 
         <Button
             android:id="@+id/save_button"
@@ -125,7 +129,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="90dp"
-            android:text="Save"
+            android:text="@string/save_button_text"
             android:ems="15"
             android:onClick="@{() -> shoeViewModel.onEventSave(shoeData.name, shoeData.size, shoeData.company, shoeData.description)}"
             app:layout_constraintEnd_toEndOf="parent"
@@ -137,7 +141,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:text="Cancel"
+            android:text="@string/cancel_button_text"
             android:ems="15"
             android:textAllCaps="false"
             app:layout_constraintEnd_toEndOf="parent"
