--- a/app/src/main/res/layout/fragment_shoe_list.xml
+++ b/app/src/main/res/layout/fragment_shoe_list.xml
@@ -15,21 +15,20 @@
         android:id="@+id/shoe_list_scrollView"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:padding="6dp"
-        android:background="#7CF4F0F0">
+        android:padding="6dp">
 
         <LinearLayout
             android:id="@+id/shoe_list_linearLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#FFFFFF"
+            android:layout_marginHorizontal="16dp"
             android:orientation="vertical"/>
     </ScrollView>
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/add_shoe_button"
-        android:layout_width="384dp"
-        android:layout_height="60dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
         android:layout_marginEnd="26dp"
         android:layout_marginBottom="36dp"
         android:clickable="true"
