--- a/app/src/main/res/layout/fragment_details.xml
+++ b/app/src/main/res/layout/fragment_details.xml
@@ -102,7 +102,7 @@
             android:padding="12dp"
             android:background="@drawable/edittext_bg"
             android:text="@={shoeData.description}"
-            android:inputType="textPersonName"
+            android:inputType="textMultiLine|textNoSuggestions"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/company_name_edittext"
